tests/NormalTests/paczka1/small_fuzzy/61707627.err
Error in line 1: z3Q0D6nC S687 66,2
Error in line 7: z3Q0D6nC A559 12,5
